--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /* BODY */
 body{
-    background-color: var(--major-bg-color);
+    background-color: var(--minor-bg-color);
 }
 /* HEADER */
 .header{
@@ -74,6 +74,116 @@ body{
     width: 40px;
     height: 40px;
 }
+/*SECTION 1*/
+
+.section-1{
+    width: 100%;
+    height: auto;
+    background: url(https://m.media-amazon.com/images/I/613st9XGEKL._SX3000_.jpg);
+    background-size: cover;
+    display: flex;
+}
+.section-1 .section-1-container{
+    margin-top: 365px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+}
+.section-1 .section-1-container .section-1-column{
+    width: 100%;
+    background-color: white;
+    padding: 20px;
+}
+.section-1 .section-1-container .section-1-column img {
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+}
+.section-1 .section-1-container .section-1-column p {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #007815;
+}
+.section-1 .section-1-container .section-1-column button {
+    margin-top: 20px;
+    width: 100%;
+    border: none;
+    background-color: var(--amazon-major-color);
+    padding: 8px;
+    border-radius: 8px;
+}
+
+/*SECTION 1-RELATED-ITEMS*/
+
+.section-2{
+    margin: 20px;
+    padding: 20px;
+    background-color: white;
+}
+.section-2 .section-2-container h3 {
+    margin-bottom: 10px;
+
+}
+.section-2 .section-2-container .product-cards{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: nowrap;
+    overflow: auto;
+
+}
+.section-2 .section-2-container .product-cards .product-card {
+    display: inline-block;
+    width: 300px !important;
+    flex: 0 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+.section-2 .section-2-container .product-cards .product-card img {
+    width: auto;
+    height: auto;
+    max-width: 270px;
+    max-height: 200px;
+}
+/*SECTION 3*/
+.section-3{
+    background-color:white;
+}
+.section-3 .section-3-container{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 20px;
+}
+.section-3 .section-3-container .product-detail-cards{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: nowrap;
+    overflow: auto;
+}
+.section-3 .section-3-container .product-detail-cards .product-detail-card{
+    display: inline-block;
+    width: 200px !important;
+    flex: 0 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4;
+}
+
+
+
+
+
+
 
 
 
