--- a/style.css
+++ b/style.css
@@ -1,193 +1,213 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-*{
-   margin: 0px;
-   padding: 0px;
-   font-family: 'poppins',sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "poppins", sans-serif;
 }
 /* VARIABLE*/
-:root{
-    --major-bg-color:#131921;
-    --minor-bg-color:#ebeded;
-    --amazon-major-color:#febd68;
+:root {
+  --major-bg-color: #131921;
+  --minor-bg-color: #ebeded;
+  --amazon-major-color: #febd68;
 }
 
 /* BODY */
-body{
-    background-color: var(--minor-bg-color);
+body {
+  background-color: var(--minor-bg-color);
 }
 /* HEADER */
-.header{
-    width: 100%;
-    height: 50px;
-    background-color: var(--major-bg-color);
-    display: flex;
-    justify-content: center;
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: var(--major-bg-color);
+  display: flex;
+  justify-content: center;
 }
 .header .header-nav {
-    margin-top: 2px;
-    display: flex;
-    justify-content: center;
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
 }
 .header .header-nav .header-container {
-    width: 1200px;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+  width: 1200px;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .header .header-nav .header-container .amazon-logo {
-    width: 100px;
-
+  width: 100px;
 }
 .header .header-nav .header-container .header-search {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
-.header .header-nav .header-container .header-search .search-input{
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ccc;
-    padding: 0px 10px;
+.header .header-nav .header-container .header-search .search-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #ccc;
+  padding: 0px 10px;
 }
-.header .header-nav .header-container .header-search .search-button{
-    width: 40px;
-    height: 42px;
-    background-color: var(--amazon-major-color);
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    color: #232323;
+.header .header-nav .header-container .header-search .search-button {
+  width: 40px;
+  height: 42px;
+  background-color: var(--amazon-major-color);
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: #232323;
 }
-.header .header-nav .header-container .header-cart{
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header .header-nav .header-container .header-cart {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.header .header-nav .header-container .header-cart svg{
-    width: 40px;
-    height: 40px;
+.header .header-nav .header-container .header-cart svg {
+  width: 40px;
+  height: 40px;
 }
 /*SECTION 1*/
 
-.section-1{
-    width: 100%;
-    height: auto;
-    background: url(https://m.media-amazon.com/images/I/613st9XGEKL._SX3000_.jpg);
-    background-size: cover;
-    display: flex;
+.section-1 {
+  width: 100%;
+  height: auto;
+  background: url(https://m.media-amazon.com/images/I/613st9XGEKL._SX3000_.jpg);
+  background-size: cover;
+  display: flex;
 }
-.section-1 .section-1-container{
-    margin-top: 365px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 20px;
+.section-1 .section-1-container {
+  margin-top: 365px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
 }
-.section-1 .section-1-container .section-1-column{
-    width: 100%;
-    background-color: white;
-    padding: 20px;
+.section-1 .section-1-container .section-1-column {
+  width: 100%;
+  background-color: white;
+  padding: 20px;
 }
 .section-1 .section-1-container .section-1-column img {
-    margin-top: 20px;
-    width: 100%;
-    height: auto;
+  margin-top: 20px;
+  width: 100%;
+  height: auto;
 }
 .section-1 .section-1-container .section-1-column p {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #007815;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #007815;
 }
 .section-1 .section-1-container .section-1-column button {
-    margin-top: 20px;
-    width: 100%;
-    border: none;
-    background-color: var(--amazon-major-color);
-    padding: 8px;
-    border-radius: 8px;
+  margin-top: 20px;
+  width: 100%;
+  border: none;
+  background-color: var(--amazon-major-color);
+  padding: 8px;
+  border-radius: 8px;
 }
 
 /*SECTION 1-RELATED-ITEMS*/
 
-.section-2{
-    margin: 20px;
-    padding: 20px;
-    background-color: white;
+.section-2 {
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
 }
 .section-2 .section-2-container h3 {
-    margin-bottom: 10px;
-
+  margin-bottom: 10px;
 }
-.section-2 .section-2-container .product-cards{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px;
-    flex-wrap: nowrap;
-    overflow: auto;
-
+.section-2 .section-2-container .product-cards {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: nowrap;
+  overflow: auto;
 }
 .section-2 .section-2-container .product-cards .product-card {
-    display: inline-block;
-    width: 300px !important;
-    flex: 0 0 auto;
-    justify-content: center;
-    align-items: center;
+  display: inline-block;
+  width: 300px !important;
+  flex: 0 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 .section-2 .section-2-container .product-cards .product-card img {
-    width: auto;
-    height: auto;
-    max-width: 270px;
-    max-height: 200px;
+  width: auto;
+  height: auto;
+  max-width: 270px;
+  max-height: 200px;
 }
 /*SECTION 3*/
-.section-3{
-    background-color:white;
+.section-3 {
+  background-color: white;
 }
-.section-3 .section-3-container{
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 20px;
+.section-3 .section-3-container {
+  margin: 20px;
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
 }
-.section-3 .section-3-container .product-detail-cards{
-    display: flex;
-    justify-content: flex-start;
+.section-3 .section-3-container .product-detail-cards {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  overflow: auto;
+
+}
+.section-3 .section-3-container .product-detail-cards .product-detail-card {
+  display: inline-block;
+  width: 200px !important;
+  flex: 0 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4;
+  
+}
+.section-3 .section-3-container .product-detail-cards .product-detail-card .product-detail-img img{
+    width: 100%;
+    height: auto;
     align-items: center;
-    gap: 20px;
-    flex-wrap: nowrap;
-    overflow: auto;
+    align-content: space-around;
+
 }
-.section-3 .section-3-container .product-detail-cards .product-detail-card{
-    display: inline-block;
-    width: 200px !important;
-    flex: 0 0 auto;
+.section-3 .section-3-container .product-detail-cards .product-detail-card a {
+    text-decoration: none;
+    font-size: 14px;
+}
+/*SECTION 4*/
+.section-4{
+    padding: 20px;
+
+}
+.section-4 .section-4-container{
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4;
+    
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
+.section-4 .section-4-container p {
+    margin-top: 4px;
+    font-size: 14px;
+}
+.section-4 .section-4-container button {
+    width: 300px;
+    border: none;
+    background: var(--amazon-major-color);
+    padding: 8px;
+    border-radius: 10px;
+}
